# server-manager

./: .gitignore  CHANGELOG.md  ENGINEER.md  README.md  migrate.sh  server-manager.sh
.github/workflows/: release.yml  update-version.yml
docs/: CHANGELOG.md  ENGINEER.md  MIGRATION_GUIDE.md  README.html  TELEMT_CONFIG.md  hysteria-traffic-research.md
integrations/: hy-sub-install.sh  hy-webhook.py
lib/: common.sh  hysteria.sh  migrate.sh  panel.sh  telemt.sh
lib/hy2/: core.sh  install.sh  integration.sh  menu.sh  users.sh
sub-injector/: Cargo.toml  config.toml.example
sub-injector/src/: main.rs
