[package]
name = "sub-injector"
version = "0.1.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "sub-injector"
path = "src/main.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip", "deflate", "brotli"] }
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[dev-dependencies]
tower = "0.5"

[profile.release]
opt-level = "z"
lto = true
strip = true
